# hailriskat_paper

./: .gitignore  DESCRIPTION  LICENSE  Manifest.toml  Project.toml  README.md  etl.py  gof.R  mev_pointwise.py  plot_quality_maps.py  pyproject.toml
ccc/: __init__.py  ccc.py
era5_retrieval/: retrieve-ERA5SL.sh  single_level_vars.txt
etl_pipelines/geosphere/: __init__.py  etl.py
models/mev_nn/: 1_mev_nn_fit_model_ensemble.jl  2a_mev_nn_calculate_return_levels_ensemble.jl  2b_mev_nn_calculate_return_periods_ensemble.jl  3_bootstrap.jl  mev_nn_calculate_return_levels.jl  mev_nn_calculate_return_levels_ensemble.jl  mev_nn_fit_model.jl  mev_nn_fit_model_ensemble.jl  mev_nn_plot_return_levels.ipynb
models/mev_pointwise/: __init__.py  mev_pointwise.py  mev_pointwise_utils.py  mev_pointwise_utils_ui.py
notebooks/: empirical_mehs_return_levels.ipynb  hail_eda.ipynb  haildays.ipynb  merge_results_to_published_dataset.ipynb  mev_nn_plot_return_levels_ensemble.ipynb  read_and_plot.ipynb
utils/: utils.py
